refactor: Rename Trinity to HUMAN THEORY APPS across all files

--- a/body/src/index.css
+++ b/body/src/index.css
@@ -162,8 +162,8 @@
   background-position: 50px 50px;
 }
 
-/* === COMBINED TRINITY BACKGROUND === */
-.trinity-void {
+/* === COMBINED hta BACKGROUND === */
+.hta-void {
   background-color: #050505;
   background-image: 
     /* Triangle layer */
